hphp/test/zend/good/Zend/tests/ns_083.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_083.php on line 5
